kubernetes/pods/gravitee/base/statefulset-mongo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-gravitee
  labels:
    app: mongodb-gravitee
spec:
  ports:
  - port: 27017
    name: mongodb
  clusterIP: None
  selector:
    app: mongodb-gravitee
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: "mongodb"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-gravitee
  template:
    metadata:
      labels:
        app: mongodb-gravitee
    spec:
      containers:
      - name: mongodb
        image: mongo:3.4
        # env:
        #   - name: MONGO_INITDB_ROOT_USERNAME
        #     value: mongouser
        #   - name: MONGO_INITDB_ROOT_PASSWORD
        #     value: jeiUke839Iwo293ndjq
        ports:
        - containerPort: 27017
          name: mongodb
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
        - name: data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 15Gi
