kubernetes/pods/gravitee/base/deployment-management-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gravitee-management-ui
  labels:
    app: gravitee-management-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gravitee-management-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gravitee-management-ui
    spec:
      containers:
      - name: gravitee-management-ui
        image: graviteeio/management-ui:1.16.6
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: gravitee-management-ui
  labels:
    app: gravitee-management-ui
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: gravitee-management-ui

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gravitee-management-ui
  annotations:
    # Use the classic nginx load balancer with the classic ELB
    kubernetes.io/ingress.class: "nginx"
    # Setup Let's Encrypt Certificates
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - hosts:
    - gravitee-management-ui.lyfted.demo.devops.bot
    secretName: gravitee-management-ui
  rules:
  - host: gravitee-management-ui.lyfted.demo.devops.bot
    http:
      paths:
      - path: /
        backend:
          serviceName: gravitee-management-ui
          servicePort: 80
